# sparse-transformer-layers

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: index.md  msdeform_attn.md  neigh_attn.md  self_attn.md
sparse_transformer_layers/: __init__.py
sparse_transformer_layers/blocks/: __init__.py  ms_deform_attn.py  neighborhood_attn.py  self_attn.py
sparse_transformer_layers/layers/: __init__.py
sparse_transformer_layers/layers/sparse_linear/: autograd.py
sparse_transformer_layers/layers/sparse_ms_deform_attn/: __init__.py  layer.py  utils.py
sparse_transformer_layers/layers/subset_attn/: autograd.py  autograd_helpers.py  subset_attn.py
sparse_transformer_layers/sparse_linear/: __init__.py  linear.py
sparse_transformer_layers/subset_attn/: __init__.py  autograd.py  subset_attn.py
sparse_transformer_layers/tests/: conftest.py  constants.py
sparse_transformer_layers/tests/sparse_linear/: test_caller_fn.py  test_gradcheck.py
sparse_transformer_layers/tests/subset_attn/: conftest.py  test_caller_fn.py
tests/: conftest.py
tests/blocks/: conftest.py  test_ms_deform_attn.py  test_neighborhood_attn.py  test_self_attn.py
tests/layers/ms_deform_attn/: test_helpers.py  test_layer.py
tests/layers/sparse_linear/: conftest.py  test_caller_fn.py  test_gradcheck.py
tests/layers/subset_attn/: input_generation.py  test_caller_fn.py  traceable_attn.py
tests/subset_attn/: traceable_attn.py
tests/subset_attn/autograd_helpers/: test_linear_grads.py
tests/subset_attn/autograd_op/: test_properties.py
(+9 files in other folders)
